--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-Hello World
+SymptomAPP
+
+Trabajo de investigación del máster de Data Science (dirigido por Dr. Rico) del Departamento de Inteligencia Artificial (DIA) de la UPM.
+
+
