--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
-SymptomAPP
-
-Trabajo de investigación del máster de Data Science (dirigido por Dr. Rico)
+<HTML>	 	 
+ 	<HEAD>	 
+ 	 	<TITLE> SymptomAPP </TITLE>
+ 	</HEAD>	 
+ 	<BODY>	 
+ 	 	Trabajo de investigación del máster de Data Science (dirigido por Dr. Rico)
 del Departamento de Inteligencia Artificial (DIA) de la UPM.
 
 Si necesita ponerse en contacto con el equipo de SymptomAPP por favor,
 comuniquese con pablopsoto@gmail.com
+ 	</BODY>	 
+</HTML>
