--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
  	 	<TITLE> SymptomAPP </TITLE>
  	</HEAD>	 
  	<BODY>	 
- 	 	Trabajo de investigación del máster de Data Science (dirigido por Dr. Rico)
-del Departamento de Inteligencia Artificial (DIA) de la UPM.
-
-Si necesita ponerse en contacto con el equipo de SymptomAPP por favor,
-comuniquese con pablopsoto@gmail.com
+   <h1>SymptomAPP</h1>
+   <p>Trabajo de investigación del máster de Data Science (dirigido por Dr. Rico) del Departamento de Inteligencia Artificial (DIA) de la UPM.</p>
+ 	 <p> Si necesita ponerse en contacto con el equipo de SymptomAPP por favor,
+    comuniquese con pablopsoto@gmail.com </p>
  	</BODY>	 
 </HTML>
