--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
  	<BODY>	 
    <h1>SymptomAPP</h1>
    <p>Trabajo de investigación del máster de Data Science (dirigido por Dr. Rico) del Departamento de Inteligencia Artificial (DIA) de la UPM.</p>
- 	 <p> Si necesita ponerse en contacto con el equipo de SymptomAPP por favor,
-    comuniquese con pablopsoto@gmail.com </p>
+ 	 <p> Si necesita ponerse en contacto con el equipo de SymptomAPP por favor, comuniquese con pablopsoto@gmail.com </p>
  	</BODY>	 
 </HTML>
