--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
  	</HEAD>	 
  	<BODY>	 
    <h1>SymptomAPP</h1>
-   <p>Trabajo de investigación del máster de Data Science (dirigido por Dr. Rico) del Departamento de Inteligencia Artificial (DIA) de la UPM.</p>
+   <p>Trabajo de investigación del 
+    <a href="https://www.upm.es/Estudiantes/Estudios_Titulaciones/Estudios_Master/Programas?id=10.17&fmt=detail">Master de Data Science</a>
+    (dirigido por Dr. Rico) del Departamento de Inteligencia Artificial (DIA) de la UPM.</p>
  	 <p> Si necesita ponerse en contacto con el equipo de SymptomAPP por favor, comuniquese con pablopsoto@gmail.com </p>
  	</BODY>	 
 </HTML>
