--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
    <h1>SymptomAPP</h1>
    <p>Trabajo de investigación del 
     <a href="https://www.upm.es/Estudiantes/Estudios_Titulaciones/Estudios_Master/Programas?id=10.17&fmt=detail">Master de Data Science</a>
-    (dirigido por Dr. Rico) del Departamento de Inteligencia Artificial (DIA) de la UPM.</p>
+    (dirigido por Dr. Rico) del Departamento de Inteligencia Artificial (
+    <a href="http://www.dia.fi.upm.es/">DIA</a>
+    ) de la UPM.</p>
  	 <p> Si necesita ponerse en contacto con el equipo de SymptomAPP por favor, comuniquese con pablopsoto@gmail.com </p>
  	</BODY>	 
 </HTML>
