--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <a href="https://www.upm.es/Estudiantes/Estudios_Titulaciones/Estudios_Master/Programas?id=10.17&fmt=detail">Master de Data Science</a>
     (dirigido por Dr. Rico) del Departamento de Inteligencia Artificial (
     <a href="http://www.dia.fi.upm.es/">DIA</a>
-    ) de la UPM.</p>
+    ) de la 
+    <a href="https://www.upm.es/">UPM</a>
+    .</p>
+ 
  	 <p> Si necesita ponerse en contacto con el equipo de SymptomAPP por favor, comuniquese con pablopsoto@gmail.com </p>
  	</BODY>	 
 </HTML>
